added drag&drop script

--- a/boardTest/board2.html
+++ b/boardTest/board2.html
@@ -1,10 +1,10 @@
-/+*<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Board</title>
-        <link rel="icon" href="/img/JoinIcon.png" />
+        <title>Join Board</title>
+        <link rel="icon" href="/img/Logo for Favicon construction.png" />
         <link rel="stylesheet" href="/css/fonts.css" />
         <link rel="stylesheet" href="/css/header.css" />
         <link rel="stylesheet" href="/boardTest/board2.css" />
@@ -112,6 +112,7 @@
         <script src="/boardTest/boardHTML.js"></script>
         <script src="/boardTest/boardUI.js"></script>
         <script src="/boardTest/boardHandling.js"></script>
+        <script src="/boardTest/boardDragAndDrop.js"></script>
         <script src="/js/addTask.js"></script>
         <script src="/js/addTaskCategoryFunctions.js"></script>
         <script src="/js/addTaskContactsAndUserActionsFunctions.js"></script>
