changed file paths

--- a/html/board2.html
+++ b/html/board2.html
@@ -7,9 +7,9 @@
         <link rel="icon" href="/img/Logo for Favicon construction.png" />
         <link rel="stylesheet" href="/css/fonts.css" />
         <link rel="stylesheet" href="/css/header.css" />
-        <link rel="stylesheet" href="/boardTest/board2.css" />
+        <link rel="stylesheet" href="/css/board.css" />
         <link rel="stylesheet" href="/css/addTask.css" />
-        <link rel="stylesheet" href="/boardTest/boardEditTask.css" />
+        <link rel="stylesheet" href="/css/boardEditTask.css" />
     </head>
     <body>
         <div includeHTML="/html/header.html"></div>
@@ -104,34 +104,34 @@
             </div>
         </div>
 
-        <script src="/boardTest/config.js"></script>
-        <script src="/boardTest/board2.js"></script>
+        <script src="/js/config.js"></script>
+        <script src="/js/board.js"></script>
         <script src="/js/utils.js"></script>
         <script src="/js/header.js"></script>
         <script src="/js/logout.js"></script>
-        <script src="/boardTest/boardHTML.js"></script>
-        <script src="/boardTest/boardUI.js"></script>
-        <script src="/boardTest/boardHandling.js"></script>
-        <script src="/boardTest/boardDragAndDrop.js"></script>
+        <script src="/js/boardHTML.js"></script>
+        <script src="/js/boardUI.js"></script>
+        <script src="/js/boardHandling.js"></script>
+        <script src="/js/boardDragAndDrop.js"></script>
         <script src="/js/addTask.js"></script>
         <script src="/js/addTaskCategoryFunctions.js"></script>
         <script src="/js/addTaskContactsAndUserActionsFunctions.js"></script>
         <script src="/js/addTaskValidationAndClearingFunctions.js"></script>
         <script src="/js/addTaskSubtasks.js"></script>
 
-        <script src="/boardTest/boardEditTask.js"></script>
-        <script src="/boardTest/boardEditTaskContacts.js"></script>
-        <script src="/boardTest/boardEditTaskHTML.js"></script>
-        <script src="/boardTest/boardEditTaskSubtasks.js"></script>
+        <script src="/js/boardEditTask.js"></script>
+        <script src="/js/boardEditTaskContacts.js"></script>
+        <script src="/js/boardEditTaskHTML.js"></script>
+        <script src="/js/boardEditTaskSubtasks.js"></script>
 
-        <script src="/boardTest/boardAddTask.js"></script>
-        <script src="/boardTest/boardAddTaskContacts.js"></script>
-        <script src="/boardTest/boardAddTaskHTML.js"></script>
-        <script src="/boardTest/boardAddTaskSubtasks.js"></script>
-        <script src="/boardTest/boardAddTaskClearingFunctions.js"></script>
-        <script src="/boardTest/boardAddTaskValidationFunctions.js"></script>
-        <script src="/boardTest/boardEditTaskValidateInputs.js"></script>
-        <script src="/boardTest/boardUIAdvanced.js"></script>
+        <script src="/js/boardAddTask.js"></script>
+        <script src="/js/boardAddTaskContacts.js"></script>
+        <script src="/js/boardAddTaskHTML.js"></script>
+        <script src="/js/boardAddTaskSubtasks.js"></script>
+        <script src="/js/boardAddTaskClearingFunctions.js"></script>
+        <script src="/js/boardAddTaskValidationFunctions.js"></script>
+        <script src="/js/boardEditTaskValidateInputs.js"></script>
+        <script src="/js/boardUIAdvanced.js"></script>
         
     </body>
 </html>
