changed file paths

--- a/html/addTask.html
+++ b/html/addTask.html
@@ -146,6 +146,6 @@
         <script src="/js/header.js"></script>
         <script src="/js/logout.js"></script>
         <script src="/js/addTask.js"></script>
-        <script src="/boardTest/config.js"></script>
+        <script src="/js/config.js"></script>
     </body>
 </html>
