finalized css files

--- a/html/addTask.html
+++ b/html/addTask.html
@@ -2,12 +2,15 @@
 <html lang="de">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Join Tasks</title>
-        <link rel="icon" href="/img/Logo for Favicon construction.png" />
-        <link rel="stylesheet" href="/css/addTask.css" />
-        <link rel="stylesheet" href="/css/fonts.css" />
-        <link rel="stylesheet" href="/css/header.css" />
+        <link rel="icon" href="/img/Logo for Favicon construction.png"/>
+        <link rel="stylesheet" href="/css/addTaskDropdownCategory.css"/>
+        <link rel="stylesheet" href="/css/addTaskMain.css"/>
+        <link rel="stylesheet" href="/css/addTaskPrioSubtask.css"/>
+        <link rel="stylesheet" href="/css/addTaskResponsive.css"/>
+        <link rel="stylesheet" href="/css/fonts.css"/>
+        <link rel="stylesheet" href="/css/header.css"/>
     </head>
     <body>
         <div includeHTML="/html/header.html"></div>
