--- a/html/board.html
+++ b/html/board.html
@@ -2,14 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Join Board</title>
-        <link rel="icon" href="/img/Logo for Favicon construction.png" />
-        <link rel="stylesheet" href="/css/fonts.css" />
-        <link rel="stylesheet" href="/css/header.css" />
-        <link rel="stylesheet" href="/css/board.css" />
-        <link rel="stylesheet" href="/css/addTask.css" />
-        <link rel="stylesheet" href="/css/boardEditTask.css" />
+        <link rel="icon" href="/img/Logo for Favicon construction.png"/>
+        <link rel="stylesheet" href="/css/fonts.css"/>
+        <link rel="stylesheet" href="/css/header.css"/>
+        <link rel="stylesheet" href="/css/boardMain.css"/>
+        <link rel="stylesheet" href="/css/boardMisc.css"/>
+        <link rel="stylesheet" href="/css/boardOther.css"/>
+        <link rel="stylesheet" href="/css/addTaskDropdownCategory.css"/>
+        <link rel="stylesheet" href="/css/addTaskMain.css"/>
+        <link rel="stylesheet" href="/css/addTaskPrioSubtask.css"/>
+        <link rel="stylesheet" href="/css/addTaskResponsive.css"/>
+        <link rel="stylesheet" href="/css/boardEditTask.css"/>
     </head>
     <body>
         <div includeHTML="/html/header.html"></div>
