--- a/html/contacts.html
+++ b/html/contacts.html
@@ -6,7 +6,10 @@
     <title>Join Contacts</title>
     <link rel="icon" href="/img/Logo for Favicon construction.png">
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/css/contacts.css">
+    <link rel="stylesheet" href="/css/contactsMain.css">
+    <link rel="stylesheet" href="/css/contactsMisc.css">
+    <link rel="stylesheet" href="/css/contactsResponsive1.css">
+    <link rel="stylesheet" href="/css/contactsResponsive2.css">
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/header.css">    
     </head>
