shortened files and functions

--- a/html/board.html
+++ b/html/board.html
@@ -117,7 +117,8 @@
         <script src="/js/boardHTML.js"></script>
         <script src="/js/boardUI.js"></script>
         <script src="/js/boardHandling.js"></script>
-        <script src="/js/boardDragAndDrop.js"></script>
+        <script src="/js/boardDragAndDrop1.js"></script>
+        <script src="/js/boardDragAndDrop2.js"></script>
         <script src="/js/addTask.js"></script>
         <script src="/js/addTaskCategoryFunctions.js"></script>
         <script src="/js/addTaskContactsAndUserActionsFunctions.js"></script>
