removed target=blank forwarding

--- a/html/header.html
+++ b/html/header.html
@@ -18,8 +18,8 @@
         <div class="user-menu-box" id="userMenuBox">
             <div class="user-menu">
                 <a class="help-link" href="/html/help.html">Help</a>
-                <a href="/html/legalnotice.html"  target="_blank" rel="noopener noreferrer">Legal Notice</a>
-                <a href="/html/privacypolicy.html"  target="_blank" rel="noopener noreferrer">Privacy Policy</a>
+                <a href="/html/legalnotice.html" rel="noopener noreferrer">Legal Notice</a>
+                <a href="/html/privacypolicy.html" rel="noopener noreferrer">Privacy Policy</a>
                 <a onclick="logout()">Log out</a>
             </div>
         </div>
@@ -36,8 +36,8 @@
         <a href="/html/contacts.html" id="contactsID" class="sideBarMenuButtons"><img src="/img/icons/contactsIcon.png" alt=""> Contacts</a>    <!-- removed onclick-function and changed href + img src-->
     </div>
     <div class="sideBarPolicyAndNotice">
-        <a href="/html/privacypolicy.html" id="privacyPolicy" class="policyHref"  target="_blank" rel="noopener noreferrer">Privacy Policy</a>                                 <!-- changed href -->
-        <a href="/html/legalnotice.html" id="legalNotice" class="noticeHref"  target="_blank" rel="noopener noreferrer">Legal notice</a>                                       <!-- changed href -->
+        <a href="/html/privacypolicy.html" id="privacyPolicy" class="policyHref" rel="noopener noreferrer">Privacy Policy</a>                                 <!-- changed href -->
+        <a href="/html/legalnotice.html" id="legalNotice" class="noticeHref" rel="noopener noreferrer">Legal notice</a>                                       <!-- changed href -->
     </div>
 </div>
 
