--- a/html/help.html
+++ b/html/help.html
@@ -76,6 +76,7 @@
 
     <script src="/js/utils.js"></script>
     <script src="/js/header.js"></script>
+    <script src="/js/logout.js"></script>
      <script>
      document.addEventListener("DOMContentLoaded", () => {
             includeHTML();
