--- a/html/privacypolicy.html
+++ b/html/privacypolicy.html
@@ -54,5 +54,6 @@
     <script src="/js/legal.js"></script>
     <script src="/js/utils.js"></script>
     <script src="/js/header.js"></script>
+    <script src="/js/logout.js"></script>
 
 </body>
