added logout.js script

--- a/html/legalnotice.html
+++ b/html/legalnotice.html
@@ -76,6 +76,7 @@
     <script src="/js/legal.js"></script>
     <script src="/js/utils.js"></script>
     <script src="/js/header.js"></script>
+    <script src="/js/logout.js"></script>
 
 </body>
 </html>
