--- a/html/help.html
+++ b/html/help.html
@@ -74,6 +74,7 @@
         </div>
     </div>
 
+    <script src="/js/help.js"></script>
     <script src="/js/utils.js"></script>
     <script src="/js/header.js"></script>
     <script src="/js/logout.js"></script>
