added helpDiv from login

--- a/html/header.html
+++ b/html/header.html
@@ -12,14 +12,17 @@
             <div class="helpDiv">
                 <a href="help.html"><img src="/img/icons/help.png" alt=""></a>
             </div>
+            <div class="helpDiv from-login">
+                <a href="help.html?fromLogin=true"><img src="/img/icons/help.png" alt="Help"></a>
+            </div>
             <div class="userProfile" id="userProfileIcon" onclick="toggleUserMenu()"></div>                                                                                                <!-- needs to be rendered dynamically -->
         </div>
 
         <div class="user-menu-box" id="userMenuBox">
             <div class="user-menu">
                 <a class="help-link" href="/html/help.html">Help</a>
-                <a href="/html/legalnotice.html"  target="_blank" rel="noopener noreferrer">Legal Notice</a>
-                <a href="/html/privacypolicy.html"  target="_blank" rel="noopener noreferrer">Privacy Policy</a>
+                <a href="/html/legalnotice.html">Legal Notice</a>
+                <a href="/html/privacypolicy.html">Privacy Policy</a>
                 <a onclick="logout()">Log out</a>
             </div>
         </div>
