adjusted error message for name input

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -45,7 +45,7 @@
                     <input id="addNewName" class="input-log-in" type="text" placeholder="Name" required>
                     <img src="/img/user.png" alt="user icon" class="icon">
                 </div>
-                <div id="addNameError" class="error-message">Please enter your name.</div>
+                <div id="addNameError" class="error-message">Please enter both a first and last name.</div>
 
                 <div class="input-field">
                     <input id="addNewEmail" class="input-log-in" type="email" placeholder="Email" required>
@@ -95,7 +95,7 @@
                     <input id="editName" class="input-log-in" type="text" placeholder="Name" required>
                     <img src="/img/user.png" alt="user icon" class="icon">
                 </div>
-                <div id="editNameError" class="error-message">Please enter your name.</div>
+                <div id="editNameError" class="error-message">Please enter both a first and last name.</div>
 
                 <div class="input-field">
                     <input id="editEmail" class="input-log-in" type="email" placeholder="Email" required>
